--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="features/css/style.css">
-
-  <title>Document</title>
+  <link href="#" rel="icon" type="image/x-icon">
+  <title>Ritualia</title>
 </head>
-<body>
 
+<body>
+  <header>
+    <nav>
+      <ul>
+
+      </ul>
+    </nav>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
