--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="features/css/style.css">
-  <link href="./features/assets/ritualia-logo.jpg" rel="icon" type="image/x-icon">
+  <link href="./features/assets/ritualia-logo.png" rel="icon" type="image/x-icon">
   <title>Ritualia</title>
 </head>
 
